<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:scaleType="center"
                android:src="@drawable/chezvj" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/bussines_name"
                android:textColor="@color/colorAccent"
                android:textSize="48sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/slogan"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/marker"
                        style="@style/icono"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/marker" />

                    <TextView
                        android:id="@+id/direccion"
                        style="@style/texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/marker"
                        android:text="@string/direccion" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/phone"
                        style="@style/icono"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/phonetext"
                        style="@style/texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/phone"
                        android:text="@string/telefono" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/email"
                        style="@style/icono"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/email" />

                    <TextView
                        android:id="@+id/emailtext"
                        style="@style/texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/email"
                        android:text="@string/email" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/opening"
                        style="@style/icono"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/open" />

                    <TextView
                        android:id="@+id/opentext"
                        style="@style/texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/opening"
                        android:text="@string/horas" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/twitter"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:src="@drawable/twitter" />

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/instagram" />
                </LinearLayout>

                <TextView
                    android:id="@+id/socialtext"
                    style="@style/texto_social"
                    android:fontFamily="sans-serif-thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
